--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<script type="text/javascript">   
+    function Redirect() 
+    {  
+        window.location="https://amobey.github.io/Nov 12 Proxies.zip"; 
+    } 
+    document.write("You will be redirected to a new page in 5 seconds"); 
+    setTimeout('Redirect()', 5000);   
+</script>
